@@ -5,8 +5,8 @@ package org.libraw.linuxosx;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 class constants$6 {
 
     static final FunctionDescriptor libraw_set_dataerror_handler$FUNC = FunctionDescriptor.ofVoid(
@@ -16,7 +16,7 @@ class constants$6 {
     );
     static final MethodHandle libraw_set_dataerror_handler$MH = RuntimeHelper.downcallHandle(
         "libraw_set_dataerror_handler",
-        constants$6.libraw_set_dataerror_handler$FUNC, false
+        constants$6.libraw_set_dataerror_handler$FUNC
     );
     static final FunctionDescriptor libraw_set_progress_handler$FUNC = FunctionDescriptor.ofVoid(
         Constants$root.C_POINTER$LAYOUT,
@@ -25,14 +25,14 @@ class constants$6 {
     );
     static final MethodHandle libraw_set_progress_handler$MH = RuntimeHelper.downcallHandle(
         "libraw_set_progress_handler",
-        constants$6.libraw_set_progress_handler$FUNC, false
+        constants$6.libraw_set_progress_handler$FUNC
     );
     static final FunctionDescriptor libraw_unpack_function_name$FUNC = FunctionDescriptor.of(Constants$root.C_POINTER$LAYOUT,
         Constants$root.C_POINTER$LAYOUT
     );
     static final MethodHandle libraw_unpack_function_name$MH = RuntimeHelper.downcallHandle(
         "libraw_unpack_function_name",
-        constants$6.libraw_unpack_function_name$FUNC, false
+        constants$6.libraw_unpack_function_name$FUNC
     );
     static final FunctionDescriptor libraw_get_decoder_info$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -40,7 +40,7 @@ class constants$6 {
     );
     static final MethodHandle libraw_get_decoder_info$MH = RuntimeHelper.downcallHandle(
         "libraw_get_decoder_info",
-        constants$6.libraw_get_decoder_info$FUNC, false
+        constants$6.libraw_get_decoder_info$FUNC
     );
     static final FunctionDescriptor libraw_COLOR$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -49,12 +49,12 @@ class constants$6 {
     );
     static final MethodHandle libraw_COLOR$MH = RuntimeHelper.downcallHandle(
         "libraw_COLOR",
-        constants$6.libraw_COLOR$FUNC, false
+        constants$6.libraw_COLOR$FUNC
     );
     static final FunctionDescriptor libraw_capabilities$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT);
-    static final MethodHandle libraw_capabilities$MH = RuntimeHelper.downcallHandle(
+    static final MethodHandle libraw_capabilities$MH = RuntimeHelper.downcallHandleVariadic(
         "libraw_capabilities",
-        constants$6.libraw_capabilities$FUNC, true
+        constants$6.libraw_capabilities$FUNC
     );
 }
 
