@@ -5,8 +5,8 @@ package org.libraw.linuxosx;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 class constants$7 {
 
     static final FunctionDescriptor libraw_adjust_sizes_info_only$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
@@ -14,7 +14,7 @@ class constants$7 {
     );
     static final MethodHandle libraw_adjust_sizes_info_only$MH = RuntimeHelper.downcallHandle(
         "libraw_adjust_sizes_info_only",
-        constants$7.libraw_adjust_sizes_info_only$FUNC, false
+        constants$7.libraw_adjust_sizes_info_only$FUNC
     );
     static final FunctionDescriptor libraw_dcraw_ppm_tiff_writer$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -22,7 +22,7 @@ class constants$7 {
     );
     static final MethodHandle libraw_dcraw_ppm_tiff_writer$MH = RuntimeHelper.downcallHandle(
         "libraw_dcraw_ppm_tiff_writer",
-        constants$7.libraw_dcraw_ppm_tiff_writer$FUNC, false
+        constants$7.libraw_dcraw_ppm_tiff_writer$FUNC
     );
     static final FunctionDescriptor libraw_dcraw_thumb_writer$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -30,14 +30,14 @@ class constants$7 {
     );
     static final MethodHandle libraw_dcraw_thumb_writer$MH = RuntimeHelper.downcallHandle(
         "libraw_dcraw_thumb_writer",
-        constants$7.libraw_dcraw_thumb_writer$FUNC, false
+        constants$7.libraw_dcraw_thumb_writer$FUNC
     );
     static final FunctionDescriptor libraw_dcraw_process$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT
     );
     static final MethodHandle libraw_dcraw_process$MH = RuntimeHelper.downcallHandle(
         "libraw_dcraw_process",
-        constants$7.libraw_dcraw_process$FUNC, false
+        constants$7.libraw_dcraw_process$FUNC
     );
     static final FunctionDescriptor libraw_dcraw_make_mem_image$FUNC = FunctionDescriptor.of(Constants$root.C_POINTER$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -45,7 +45,7 @@ class constants$7 {
     );
     static final MethodHandle libraw_dcraw_make_mem_image$MH = RuntimeHelper.downcallHandle(
         "libraw_dcraw_make_mem_image",
-        constants$7.libraw_dcraw_make_mem_image$FUNC, false
+        constants$7.libraw_dcraw_make_mem_image$FUNC
     );
     static final FunctionDescriptor libraw_dcraw_make_mem_thumb$FUNC = FunctionDescriptor.of(Constants$root.C_POINTER$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -53,7 +53,7 @@ class constants$7 {
     );
     static final MethodHandle libraw_dcraw_make_mem_thumb$MH = RuntimeHelper.downcallHandle(
         "libraw_dcraw_make_mem_thumb",
-        constants$7.libraw_dcraw_make_mem_thumb$FUNC, false
+        constants$7.libraw_dcraw_make_mem_thumb$FUNC
     );
 }
 
