@@ -5,8 +5,8 @@ package org.libraw.linuxosx;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public class libraw_data_t {
 
     static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
@@ -849,13 +849,13 @@ public class libraw_data_t {
         return libraw_data_t.image$VH;
     }
     public static MemoryAddress image$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress)libraw_data_t.image$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress)libraw_data_t.image$VH.get(seg);
     }
     public static void image$set( MemorySegment seg, MemoryAddress x) {
         libraw_data_t.image$VH.set(seg, x);
     }
     public static MemoryAddress image$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress)libraw_data_t.image$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemoryAddress)libraw_data_t.image$VH.get(seg.asSlice(index*sizeof()));
     }
     public static void image$set(MemorySegment seg, long index, MemoryAddress x) {
         libraw_data_t.image$VH.set(seg.asSlice(index*sizeof()), x);
@@ -930,13 +930,13 @@ public class libraw_data_t {
         return libraw_data_t.parent_class$VH;
     }
     public static MemoryAddress parent_class$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress)libraw_data_t.parent_class$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress)libraw_data_t.parent_class$VH.get(seg);
     }
     public static void parent_class$set( MemorySegment seg, MemoryAddress x) {
         libraw_data_t.parent_class$VH.set(seg, x);
     }
     public static MemoryAddress parent_class$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress)libraw_data_t.parent_class$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemoryAddress)libraw_data_t.parent_class$VH.get(seg.asSlice(index*sizeof()));
     }
     public static void parent_class$set(MemorySegment seg, long index, MemoryAddress x) {
         libraw_data_t.parent_class$VH.set(seg.asSlice(index*sizeof()), x);
@@ -946,11 +946,7 @@ public class libraw_data_t {
     public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment allocate(ResourceScope scope) { return allocate(SegmentAllocator.nativeAllocator(scope)); }
-    public static MemorySegment allocateArray(int len, ResourceScope scope) {
-        return allocateArray(len, SegmentAllocator.nativeAllocator(scope));
-    }
-    public static MemorySegment ofAddress(MemoryAddress addr, ResourceScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
 }
 
 
