@@ -5,8 +5,8 @@ package org.libraw.linuxosx;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public class libraw_raw_unpack_params_t {
 
     static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
@@ -161,13 +161,13 @@ public class libraw_raw_unpack_params_t {
         return libraw_raw_unpack_params_t.custom_camera_strings$VH;
     }
     public static MemoryAddress custom_camera_strings$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress)libraw_raw_unpack_params_t.custom_camera_strings$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress)libraw_raw_unpack_params_t.custom_camera_strings$VH.get(seg);
     }
     public static void custom_camera_strings$set( MemorySegment seg, MemoryAddress x) {
         libraw_raw_unpack_params_t.custom_camera_strings$VH.set(seg, x);
     }
     public static MemoryAddress custom_camera_strings$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress)libraw_raw_unpack_params_t.custom_camera_strings$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemoryAddress)libraw_raw_unpack_params_t.custom_camera_strings$VH.get(seg.asSlice(index*sizeof()));
     }
     public static void custom_camera_strings$set(MemorySegment seg, long index, MemoryAddress x) {
         libraw_raw_unpack_params_t.custom_camera_strings$VH.set(seg.asSlice(index*sizeof()), x);
@@ -177,11 +177,7 @@ public class libraw_raw_unpack_params_t {
     public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment allocate(ResourceScope scope) { return allocate(SegmentAllocator.nativeAllocator(scope)); }
-    public static MemorySegment allocateArray(int len, ResourceScope scope) {
-        return allocateArray(len, SegmentAllocator.nativeAllocator(scope));
-    }
-    public static MemorySegment ofAddress(MemoryAddress addr, ResourceScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
 }
 
 
