@@ -5,8 +5,8 @@ package org.libraw.linuxosx;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public class output_data_t {
 
     static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
@@ -21,13 +21,13 @@ public class output_data_t {
         return output_data_t.histogram$VH;
     }
     public static MemoryAddress histogram$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress)output_data_t.histogram$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress)output_data_t.histogram$VH.get(seg);
     }
     public static void histogram$set( MemorySegment seg, MemoryAddress x) {
         output_data_t.histogram$VH.set(seg, x);
     }
     public static MemoryAddress histogram$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress)output_data_t.histogram$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemoryAddress)output_data_t.histogram$VH.get(seg.asSlice(index*sizeof()));
     }
     public static void histogram$set(MemorySegment seg, long index, MemoryAddress x) {
         output_data_t.histogram$VH.set(seg.asSlice(index*sizeof()), x);
@@ -37,13 +37,13 @@ public class output_data_t {
         return output_data_t.oprof$VH;
     }
     public static MemoryAddress oprof$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress)output_data_t.oprof$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress)output_data_t.oprof$VH.get(seg);
     }
     public static void oprof$set( MemorySegment seg, MemoryAddress x) {
         output_data_t.oprof$VH.set(seg, x);
     }
     public static MemoryAddress oprof$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress)output_data_t.oprof$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemoryAddress)output_data_t.oprof$VH.get(seg.asSlice(index*sizeof()));
     }
     public static void oprof$set(MemorySegment seg, long index, MemoryAddress x) {
         output_data_t.oprof$VH.set(seg.asSlice(index*sizeof()), x);
@@ -53,11 +53,7 @@ public class output_data_t {
     public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment allocate(ResourceScope scope) { return allocate(SegmentAllocator.nativeAllocator(scope)); }
-    public static MemorySegment allocateArray(int len, ResourceScope scope) {
-        return allocateArray(len, SegmentAllocator.nativeAllocator(scope));
-    }
-    public static MemorySegment ofAddress(MemoryAddress addr, ResourceScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
 }
 
 
