@@ -5,8 +5,8 @@ package org.libraw.win;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public class fuji_q_table {
 
     static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
@@ -26,13 +26,13 @@ public class fuji_q_table {
         return fuji_q_table.q_table$VH;
     }
     public static MemoryAddress q_table$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress)fuji_q_table.q_table$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress)fuji_q_table.q_table$VH.get(seg);
     }
     public static void q_table$set( MemorySegment seg, MemoryAddress x) {
         fuji_q_table.q_table$VH.set(seg, x);
     }
     public static MemoryAddress q_table$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress)fuji_q_table.q_table$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemoryAddress)fuji_q_table.q_table$VH.get(seg.asSlice(index*sizeof()));
     }
     public static void q_table$set(MemorySegment seg, long index, MemoryAddress x) {
         fuji_q_table.q_table$VH.set(seg.asSlice(index*sizeof()), x);
@@ -122,11 +122,7 @@ public class fuji_q_table {
     public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment allocate(ResourceScope scope) { return allocate(SegmentAllocator.nativeAllocator(scope)); }
-    public static MemorySegment allocateArray(int len, ResourceScope scope) {
-        return allocateArray(len, SegmentAllocator.nativeAllocator(scope));
-    }
-    public static MemorySegment ofAddress(MemoryAddress addr, ResourceScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
 }
 
 
