@@ -5,8 +5,8 @@ package org.libraw.win;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public class jhead {
 
     static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
@@ -176,13 +176,13 @@ public class jhead {
         return jhead.row$VH;
     }
     public static MemoryAddress row$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress)jhead.row$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress)jhead.row$VH.get(seg);
     }
     public static void row$set( MemorySegment seg, MemoryAddress x) {
         jhead.row$VH.set(seg, x);
     }
     public static MemoryAddress row$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress)jhead.row$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemoryAddress)jhead.row$VH.get(seg.asSlice(index*sizeof()));
     }
     public static void row$set(MemorySegment seg, long index, MemoryAddress x) {
         jhead.row$VH.set(seg.asSlice(index*sizeof()), x);
@@ -192,11 +192,7 @@ public class jhead {
     public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment allocate(ResourceScope scope) { return allocate(SegmentAllocator.nativeAllocator(scope)); }
-    public static MemorySegment allocateArray(int len, ResourceScope scope) {
-        return allocateArray(len, SegmentAllocator.nativeAllocator(scope));
-    }
-    public static MemorySegment ofAddress(MemoryAddress addr, ResourceScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
 }
 
 
