@@ -5,8 +5,8 @@ package org.libraw.win;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public class libraw_colordata_t {
 
     static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
@@ -251,13 +251,13 @@ public class libraw_colordata_t {
         return libraw_colordata_t.profile$VH;
     }
     public static MemoryAddress profile$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress)libraw_colordata_t.profile$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress)libraw_colordata_t.profile$VH.get(seg);
     }
     public static void profile$set( MemorySegment seg, MemoryAddress x) {
         libraw_colordata_t.profile$VH.set(seg, x);
     }
     public static MemoryAddress profile$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress)libraw_colordata_t.profile$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemoryAddress)libraw_colordata_t.profile$VH.get(seg.asSlice(index*sizeof()));
     }
     public static void profile$set(MemorySegment seg, long index, MemoryAddress x) {
         libraw_colordata_t.profile$VH.set(seg.asSlice(index*sizeof()), x);
@@ -349,11 +349,7 @@ public class libraw_colordata_t {
     public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment allocate(ResourceScope scope) { return allocate(SegmentAllocator.nativeAllocator(scope)); }
-    public static MemorySegment allocateArray(int len, ResourceScope scope) {
-        return allocateArray(len, SegmentAllocator.nativeAllocator(scope));
-    }
-    public static MemorySegment ofAddress(MemoryAddress addr, ResourceScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
 }
 
 
