@@ -5,19 +5,19 @@ package org.libraw.win;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public interface process_step_callback {
 
-    void apply(jdk.incubator.foreign.MemoryAddress x0);
-    static NativeSymbol allocate(process_step_callback fi, ResourceScope scope) {
-        return RuntimeHelper.upcallStub(process_step_callback.class, fi, constants$2.process_step_callback$FUNC, "(Ljdk/incubator/foreign/MemoryAddress;)V", scope);
+    void apply(java.lang.foreign.MemoryAddress ctx);
+    static MemorySegment allocate(process_step_callback fi, MemorySession session) {
+        return RuntimeHelper.upcallStub(process_step_callback.class, fi, constants$2.process_step_callback$FUNC, session);
     }
-    static process_step_callback ofAddress(MemoryAddress addr, ResourceScope scope) {
-        NativeSymbol symbol = NativeSymbol.ofAddress("process_step_callback::" + Long.toHexString(addr.toRawLongValue()), addr, scope);
-return (jdk.incubator.foreign.MemoryAddress x0) -> {
+    static process_step_callback ofAddress(MemoryAddress addr, MemorySession session) {
+        MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
+        return (java.lang.foreign.MemoryAddress _ctx) -> {
             try {
-                constants$2.process_step_callback$MH.invokeExact(symbol, (jdk.incubator.foreign.Addressable)x0);
+                constants$2.process_step_callback$MH.invokeExact((Addressable)symbol, (java.lang.foreign.Addressable)_ctx);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
