@@ -5,8 +5,8 @@ package org.libraw.win;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public class tiff_ifd_t {
 
     static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
@@ -314,13 +314,13 @@ public class tiff_ifd_t {
         return tiff_ifd_t.strip_offsets$VH;
     }
     public static MemoryAddress strip_offsets$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress)tiff_ifd_t.strip_offsets$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress)tiff_ifd_t.strip_offsets$VH.get(seg);
     }
     public static void strip_offsets$set( MemorySegment seg, MemoryAddress x) {
         tiff_ifd_t.strip_offsets$VH.set(seg, x);
     }
     public static MemoryAddress strip_offsets$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress)tiff_ifd_t.strip_offsets$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemoryAddress)tiff_ifd_t.strip_offsets$VH.get(seg.asSlice(index*sizeof()));
     }
     public static void strip_offsets$set(MemorySegment seg, long index, MemoryAddress x) {
         tiff_ifd_t.strip_offsets$VH.set(seg.asSlice(index*sizeof()), x);
@@ -346,13 +346,13 @@ public class tiff_ifd_t {
         return tiff_ifd_t.strip_byte_counts$VH;
     }
     public static MemoryAddress strip_byte_counts$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress)tiff_ifd_t.strip_byte_counts$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress)tiff_ifd_t.strip_byte_counts$VH.get(seg);
     }
     public static void strip_byte_counts$set( MemorySegment seg, MemoryAddress x) {
         tiff_ifd_t.strip_byte_counts$VH.set(seg, x);
     }
     public static MemoryAddress strip_byte_counts$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress)tiff_ifd_t.strip_byte_counts$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemoryAddress)tiff_ifd_t.strip_byte_counts$VH.get(seg.asSlice(index*sizeof()));
     }
     public static void strip_byte_counts$set(MemorySegment seg, long index, MemoryAddress x) {
         tiff_ifd_t.strip_byte_counts$VH.set(seg.asSlice(index*sizeof()), x);
@@ -560,11 +560,7 @@ public class tiff_ifd_t {
     public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment allocate(ResourceScope scope) { return allocate(SegmentAllocator.nativeAllocator(scope)); }
-    public static MemorySegment allocateArray(int len, ResourceScope scope) {
-        return allocateArray(len, SegmentAllocator.nativeAllocator(scope));
-    }
-    public static MemorySegment ofAddress(MemoryAddress addr, ResourceScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
 }
 
 
